# Dooson_Food

./: .env.example  .gitignore  CLAUDE.md  CONVENTIONS.md  README.md  demo.sh
.bkit/: agent-state.json
.claude/: settings.local.json
apps/web/: tailwind.config.ts
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1777862925370.json  snapshot-1777875528994.json
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial_schema.py
services/api/app/: config.py  main.py
services/api/app/domains/ai_agent/: router.py  schemas.py  service.py
services/api/app/domains/auth/: models.py  router.py  schemas.py  service.py
services/api/app/domains/equipment/: models.py  router.py  schemas.py  service.py
services/api/app/domains/haccp/: models.py  router.py  schemas.py  service.py
services/api/app/domains/lot/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/notification/: models.py  router.py  schemas.py  service.py
services/api/app/domains/product/: models.py  router.py  schemas.py  service.py
services/api/app/domains/production/: models.py  repository.py  router.py  schemas.py  service.py
services/api/app/domains/quality/: models.py  router.py  schemas.py  service.py
services/api/app/infrastructure/: auth.py  database.py
services/api/app/shared/: base_model.py  exceptions.py  pagination.py
services/api/seeds/: seed_data.py
services/api/tests/: conftest.py
services/api/tests/integration/: test_lot_lineage_perf.py
(+64 files in other folders)
